public class Barco implements Transporte {
    @Override
    public String entregar() {
        return "Entrega por mar (barco)";
    }
}
