public class Camion implements Transporte {
    @Override
    public String entregar() {
        return "Entrega por carretera (camión)";
    }
}
