public interface Transporte {
    String entregar();
}
